Bug 987771 - Trigger a repaint if we create an APZC with a pre-existing displayport that doesn't cover the composition bounds. r=botond, a=bajaj